Revision history for Dist::Zilla::PluginBundle::MSCHOUT

{{$NEXT}}

0.38  2018-06-04
    - Add Pod::Weaver::Plugin::SingleEncoding

0.37  2018-02-07
    - switch bugtracker from rt.cpan.org to github issues

0.36  2017-12-24
    - add Dist::Zilla::Plugin::MetaProvides::Package plugin

0.35  2017-08-03
    - remove ArchiveRelease

0.34  2017-07-31
    - add AuthorSignatureTest

0.33  2017-07-31
    - Git::Check: allow .travis.yml to be dirty

0.32  2017-07-29
    - add MinimumPerl plugin
    - enable Dist::Zilla::PluginBundle::PluginRemover plugin
    - make signature test an AUTHOR test and use Test::Signature
    - use Moose attibutes for options
    - enable ::PluginBundle::Config::Slicer role so plugin options can be
      easily set
    - enable InsertCopyright plugin
    - enable Prereqs::AuthorDeps plugin

0.31  2016-08-30
    - Configure Git::Push to also push build/releases if it exists on origin
    - signature test: skip generated files

0.30  2016-08-30
    - Mention use_travis and use_twitter options in POD docs
    - add MetaJSON plugin

0.29  2016-07-04
    - 0.28 accidentally completely removed Git::Push. Fixed.

0.28  2016-07-04
    - back out build/releases push config - this auto pushes anayway if remote
      branch exists.

0.27  2016-07-04
    - add use_travis option to enable the TravisYML plugin
    - configure Git::Push to push build/releases as well as master branch

0.26  2016-07-02
    - fix typo causing breakage if use_twitter was set (oops)

0.25  2016-07-02
    - enable Twitter plugin if 'use_twitter' is set
    - use RemovePrereqs to remove Module::Signature from prereqs since its
      optional
    - add missing dependency CheckPrereqsIndexed

0.24  2016-06-30
    - PodWeaver: allow SOURCE and AUTHOR(S) sections to be overridden.

0.23  2016-06-27
    - switch from deprecated BumpVersionFromGit to Git::NextVersion.  This is a
      drop-in replacement.

0.22  2011-05-30
    - use CheckPrereqsIndexed plugin