@@ -1,6 +1,7 @@
 Revision history for Dist::Zilla::PluginBundle::MSCHOUT
 
 {{$NEXT}}
+    - Remove support for Travis CI
 
 0.38  2018-06-04
     - Add Pod::Weaver::Plugin::SingleEncoding
